<?php

namespace App\State;

/**
 * Class Color
 * @package App\State
 */
class Color
{
    const RED    = '紅燈';
    const YELLOW = '黃燈';
    const GREEN  = '綠燈';
}